--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
 
   <h3>Gruppentraining</h3>
   <p>Details folgen bald!</p>
+
+  <p><strong>Gerade, wenn du AnfängerIn bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
+</section>
+
+<section>
+  <h2>Was mache ich, wenn ich nicht trainiere oder Training gebe?</h2>
+  <p>
+    Aktuell arbeite ich hauptberuflich als Mathematikerin in der Forschung – das heißt: analytisches Denken, Struktur und Präzision gehören ebenso zu mir wie Motivation, Begeisterung und Power. Außerdem war ich vier Jahre lang Mathematik-Tutorin an der Technischen Universität Berlin und 10 Jahre private Nachhilfelehrerin. 
+  </p>
+  <p>
+    Du kannst also mit herausragenden didaktischen Fähigkeiten rechnen!
+  </p>
 </section>
 
 <section class="kontakt">
@@ -112,6 +124,10 @@
 
 <footer>
   <p>&copy; 2025 Fit mit Helia – Alle Rechte vorbehalten</p>
+</footer>
+
+</body>
+</html>
 </footer>
 
 </body>
