--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     header {
       background: url('https://source.unsplash.com/1600x600/?fitness,woman') no-repeat center center;
       background-size: cover;
-      color: white;
+      color: #e67e22;
       text-align: center;
       padding: 100px 20px;
     }
