--- a/index.html
+++ b/index.html
@@ -64,14 +64,6 @@
     Ich bin seit über drei Jahren als Trainerin für (Klein-)Gruppen im Bereich Cross Training, HIIT, funktionales Training und Langhanteltraining tätig. Meine eigene Leidenschaft gilt dem CrossFit und Kraftdreikampf – ich lebe, was ich coache.
   </p>
 
-  <h2>Meine Qualifikationen</h2>
-  <ul>
-    <li>Fitnesstrainer B-Lizenz</li>
-    <li>Fitnesstrainer A-Lizenz</li>
-    <li>Mehrjährige Erfahrung im Gruppencoaching</li>
-    <li>Eigene intensive Trainingspraxis & tiefes Verständnis für individuelle Herausforderungen</li>
-  </ul>
-
   <h2>Meine Leistungen</h2>
 
   <h3>Personal Training (1:1)</h3>
@@ -88,8 +80,17 @@
   <h3>Gruppentraining</h3>
   <p>Details folgen bald!</p>
 
+  <h2>Meine Qualifikationen</h2>
+  <ul>
+    <li>Fitnesstrainer B-Lizenz</li>
+    <li>Fitnesstrainer A-Lizenz</li>
+    <li>Mehrjährige Erfahrung im Gruppencoaching</li>
+    <li>Eigene intensive Trainingspraxis & tiefes Verständnis für individuelle Herausforderungen</li>
+  </ul>
+
+  <h2>Was mich als Coach besonders macht:</h2>
   <p>
-    Was mich als Coach besonders macht: Ich bin wirklich für dich da. Kein leeres Gerede – ich freue mich über deinen Fortschritt, als wäre es mein eigener. Ich sehe, was du brauchst, oft bevor du es selbst bemerkst: sei es technische Feinjustierung, eine Anpassung des Trainingsplans oder einfach ein motivierendes Wort zur richtigen Zeit. Dein Ziel ist mein Ziel – und ich gebe alles, damit du es erreichst.
+    Ich bin wirklich für dich da. Kein leeres Gerede – ich freue mich über deinen Fortschritt, als wäre es mein eigener. Ich sehe, was du brauchst, oft bevor du es selbst bemerkst: sei es technische Feinjustierung, eine Anpassung des Trainingsplans oder einfach ein motivierendes Wort zur richtigen Zeit. Dein Ziel ist mein Ziel – und ich gebe alles, damit du es erreichst.
   </p>
 
   <p><strong>Gerade, wenn du AnfängerIn bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
