--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
   </p>
 
   <p><strong>Gerade, wenn du AnfängerIn bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
+  </p>
+<p><strong>Melde dich bei mir und wir finden das passende Angebot für dich!</strong></p>
 </section>
 
 <section>
