--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 </header>
 
 <section>
-  <h2>Über mich</h2>
+  <h2>Werde zu einer besseren Version deiner selbst!</h2>
   <p>
-    Ich bin seit über drei Jahren als Trainerin für (Klein-)Gruppen im Bereich Cross Training, HIIT, funktionales Training und Langhanteltraining tätig. Meine eigene Leidenschaft gilt dem CrossFit und Kraftdreikampf – ich lebe, was ich coache.
+    Du willst stärker werden, Muskulatur aufbauen, Gewicht verlieren oder einfach gesünder und leistungsfähiger durchs Leben gehen? Dann bist du bei mir genau richtig!
   </p>
 
   <h2>Meine Leistungen</h2>
