--- a/index.html
+++ b/index.html
@@ -4,152 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fit mit Helia</title>
-  <style>
-    <style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    color: #333;
-    line-height: 1.6;
-  }
-
-  /* === Navigationsmenü === */
-  nav {
-    background-color: white;
-    padding: 10px 20px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-  }
-
-  nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-  }
-
-  nav li {
-    margin: 0 15px;
-  }
-
-  nav a {
-    text-decoration: none;
-    color: #e67e22;
-    font-weight: bold;
-  }
-
-  nav a:hover {
-    text-decoration: underline;
-  }
-
-  /* ... der Rest deines CSS kommt hier ... */
-</style>
-
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      color: #333;
-      line-height: 1.6;
-      position: relative;
-    }
-
-    /* Hintergrundbild auf ganzer Seite */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: url('DEINBILDURL') no-repeat center center / cover;
-      z-index: -2;
-    }
-
-    /* Graue, unscharfe, helle Overlay-Schicht */
-    body::after {
-      content: "";
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(255, 255, 255, 0.7);
-      backdrop-filter: blur(4px);
-      z-index: -1;
-    }
-
-    header {
-      text-align: center;
-      padding: 100px 20px 60px;
-      color: #e67e22;
-    }
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-    }
-    header p {
-      font-size: 1.2rem;
-    }
-
-    section {
-      max-width: 900px;
-      margin: auto;
-      padding: 40px 20px;
-      background-color: rgba(255, 255, 255, 0.85);
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-      margin-bottom: 20px;
-    }
-
-    h2 {
-      color: #e67e22;
-      margin-bottom: 10px;
-    }
-
-    ul {
-      list-style-type: disc;
-      margin-left: 20px;
-    }
-
-    .kontakt a {
-      color: #e67e22;
-      text-decoration: none;
-    }
-
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-
-    .galerie {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
-
-    .galerie img {
-      width: 300px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 <nav>
   <ul>
-    <li><a href="#ueber-mich">Über mich</a></li>
+    <li><a href="#start">Start</a></li>
     <li><a href="#leistungen">Leistungen</a></li>
-    <li><a href="#qualifikationen">Qualifikationen</a></li>
-    <li><a href="galerie.html">Galerie</a></li>
+    <li><a href="#besonders">Coaching</a></li>
     <li><a href="#kontakt">Kontakt</a></li>
+    <li><a href="galerie.html">Galerie</a></li>
+    <li><a href="ueber-mich.html">Über mich</a></li>
   </ul>
 </nav>
-<header>
+
+<header id="start">
   <h1>Fit mit Helia</h1>
   <p>Personal Training & Gruppencoaching mit Helia Shafigh</p>
 </header>
@@ -159,8 +29,11 @@
   <p>
     Du willst stärker werden, Muskulatur aufbauen, Gewicht verlieren oder einfach gesünder und leistungsfähiger durchs Leben gehen? Dann bist du bei mir genau richtig!
   </p>
+</section>
 
+<section id="leistungen">
   <h2>Meine Leistungen</h2>
+
   <h3>Personal Training (1:1)</h3>
   <ul>
     <li>Krafttraining & Langhanteltraining</li>
@@ -174,42 +47,12 @@
 
   <h3>Gruppentraining</h3>
   <p>Details folgen bald!</p>
-
-  <h2>Meine Qualifikationen</h2>
-  <ul>
-    <li>Fitnesstrainer B-Lizenz</li>
-    <li>Fitnesstrainer A-Lizenz in Kürze</li>
-    <li>Mehrjährige Erfahrung im Gruppencoaching</li>
-    <li>Eigene intensive Trainingspraxis & tiefes Verständnis für individuelle Herausforderungen</li>
-  </ul>
-
-  <h2>Was mich als Coach besonders macht:</h2>
-  <p>
-    Ich bin wirklich für dich da. Kein leeres Gerede – ich freue mich über deinen Fortschritt, als wäre es mein eigener. Ich sehe, was du brauchst, oft bevor du es selbst bemerkst: sei es technische Feinjustierung, eine Anpassung des Trainingsplans oder einfach ein motivierendes Wort zur richtigen Zeit. Dein Ziel ist mein Ziel – und ich gebe alles, damit du es erreichst.
-  </p>
-  <p><strong>Melde dich bei mir und wir finden das passende Angebot für dich!</strong></p>
+</section>
 
   <p><strong>Gerade, wenn du AnfängerIn bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
-</section>
+  <p><strong>Melde dich bei mir und wir finden das passende Angebot für dich!</strong></p>
 
-<section>
-  <h2>Was mache ich, wenn ich nicht trainiere oder Training gebe?</h2>
-  <p>
-    Aktuell arbeite ich hauptberuflich als Mathematikerin in der Forschung – das heißt: analytisches Denken, Struktur und Präzision gehören ebenso zu mir wie Motivation, Begeisterung und Power. Außerdem war ich vier Jahre lang Mathematik-Tutorin an der Technischen Universität Berlin und 10 Jahre private Nachhilfelehrerin. 
-  </p>
-  <p>
-    Du kannst also mit herausragenden didaktischen Fähigkeiten rechnen!
-  </p>
-</section>
-
-<section>
-  <h2>Galerie</h2>
-  <div class="galerie">
-    <img src="DEINBILDURL" alt="Helia beim Training">
-  </div>
-</section>
-
-<section class="kontakt">
+<section class="kontakt" id="kontakt">
   <h2>Kontakt</h2>
   <p><strong>E-Mail:</strong> <a href="mailto:helia7773@yahoo.com">helia7773@yahoo.com</a></p>
   <p><strong>Instagram:</strong> <a href="https://www.instagram.com/helia7773/" target="_blank">@helia7773</a></p>
@@ -219,6 +62,10 @@
 <footer>
   <p>&copy; 2025 Fit mit Helia – Alle Rechte vorbehalten</p>
 </footer>
+
+</body>
+</html>
+
 
 </body>
 </html>
