--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <ul>
     <li><a href="#start">Start</a></li>
     <li><a href="#leistungen">Leistungen</a></li>
-    <li><a href="#besonders">Coaching</a></li>
+    <li><a href="#coaching">Coaching</a></li>
     <li><a href="#kontakt">Kontakt</a></li>
     <li><a href="galerie.html">Galerie</a></li>
     <li><a href="ueber-mich.html">Über mich</a></li>
@@ -49,8 +49,10 @@
   <p>Details folgen bald!</p>
 </section>
 
+<section id="coaching">
   <p><strong>Gerade, wenn du AnfängerIn bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
   <p><strong>Melde dich bei mir und wir finden das passende Angebot für dich!</strong></p>
+</section>
 
 <section class="kontakt" id="kontakt">
   <h2>Kontakt</h2>
@@ -66,8 +68,5 @@
 </body>
 </html>
 
-
-</body>
-</html>
 
 
