--- a/galerie.html
+++ b/galerie.html
@@ -63,12 +63,12 @@
 
 <header>
   <h1>Galerie</h1>
-  <p>Einblicke in mein Training, Coaching & Wettkämpfe</p>
+  <p>Einblicke in mein Training und Coaching</p>
 </header>
 
 <section>
   <div class="galerie">
-    <img src="/mnt/data/15344_20250518_155826_491676612_original.JPG" alt="Helia beim Rope Pull">
+    <img src="/mnt/data/15344_20250518_155826_491676612_original.JPG" alt="Sled-Pull">
     <!-- Hier kannst du weitere Bilder hinzufügen -->
   </div>
 
