--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
   </ul>
 
   <h3>Gruppentraining</h3>
+  <ul>
+    <li>Cross Training Outdoor</li>
+    <li>Krafttraining</li>
+  </ul>
   <p>Details folgen bald!</p>
 </section>
 
