--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
 
 <nav>
   <ul>
-    <li><a href="#start">Start</a></li>
-    <li><a href="#leistungen">Leistungen</a></li>
-    <li><a href="#coaching">Coaching</a></li>
-    <li><a href="#kontakt">Kontakt</a></li>
-    <li><a href="galerie.html">Galerie</a></li>
+    <li><a href="index.html">Leistungen</a></li>
     <li><a href="ueber-mich.html">Über mich</a></li>
+    <li><a href="galerie.html">Galerie</a></li>
   </ul>
 </nav>
 
