--- a/galerie.html
+++ b/galerie.html
@@ -61,6 +61,14 @@
 </head>
 <body>
 
+  <nav>
+  <ul>
+    <li><a href="index.html">Leistungen</a></li>
+    <li><a href="ueber-mich.html">Über mich</a></li>
+    <li><a href="galerie.html">Galerie</a></li>
+  </ul>
+</nav>
+
 <header>
   <h1>Galerie</h1>
   <p>Einblicke in mein Training und Coaching</p>
