--- a/galerie.html
+++ b/galerie.html
@@ -85,5 +85,16 @@
   </div>
 </section>
 
+  <section class="kontakt" id="kontakt">
+  <h2>Kontakt</h2>
+  <p><strong>E-Mail:</strong> <a href="mailto:helia7773@yahoo.com">helia7773@yahoo.com</a></p>
+  <p><strong>Instagram:</strong> <a href="https://www.instagram.com/helia7773/" target="_blank">@helia7773</a></p>
+  <p><strong>Telefon:</strong> <a href="tel:+491742769807">0174 2769807</a></p>
+</section>
+
+<footer>
+  <p>&copy; 2025 Fit mit Helia – Alle Rechte vorbehalten</p>
+</footer>
+
 </body>
 </html>
