--- a/galerie.html
+++ b/galerie.html
@@ -13,6 +13,28 @@
       line-height: 1.6;
     }
 
+    nav {
+      background-color: #333;
+    }
+
+    nav ul {
+      display: flex;
+      justify-content: center;
+      list-style: none;
+      margin: 0;
+      padding: 10px;
+    }
+
+    nav ul li {
+      margin: 0 15px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
     header {
       text-align: center;
       padding: 60px 20px;
@@ -32,36 +54,28 @@
       text-align: center;
     }
 
-    .galerie {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
-
-    .galerie img {
-      width: 300px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    .zurueck {
+    .galerie-hinweis {
       text-align: center;
-      margin-top: 40px;
+      font-style: italic;
+      color: #777;
     }
 
-    .zurueck a {
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .kontakt a {
       color: #e67e22;
       text-decoration: none;
-      font-weight: bold;
     }
   </style>
 </head>
 <body>
 
-  <nav>
+<nav>
   <ul>
     <li><a href="index.html">Leistungen</a></li>
     <li><a href="ueber-mich.html">Über mich</a></li>
@@ -75,17 +89,10 @@
 </header>
 
 <section>
-  <div class="galerie">
-    <img src="/mnt/data/15344_20250518_155826_491676612_original.JPG" alt="Sled-Pull">
-    <!-- Hier kannst du weitere Bilder hinzufügen -->
-  </div>
-
-  <div class="zurueck">
-    <p><a href="index.html">&larr; Zurück zur Startseite</a></p>
-  </div>
+  <p class="galerie-hinweis">Bilder in Kürze</p>
 </section>
 
-  <section class="kontakt" id="kontakt">
+<section class="kontakt" id="kontakt">
   <h2>Kontakt</h2>
   <p><strong>E-Mail:</strong> <a href="mailto:helia7773@yahoo.com">helia7773@yahoo.com</a></p>
   <p><strong>Instagram:</strong> <a href="https://www.instagram.com/helia7773/" target="_blank">@helia7773</a></p>
@@ -98,3 +105,4 @@
 
 </body>
 </html>
+
