--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -18,13 +18,18 @@
 
 <header>
   <h1>Über mich</h1>
-  <p>Mehr über meine Motivation, Qualifikationen und meinen Hintergrund</p>
 </header>
 
 <section>
   <h2>Über mich</h2>
   <p>
-    Ich bin seit über drei Jahren als Trainerin für (Klein-)Gruppen im Bereich Cross Training, HIIT, funktionales Training und Langhanteltraining tätig. Meine eigene Leidenschaft gilt dem CrossFit und Kraftdreikampf – ich lebe, was ich coache.
+    Ich bin seit über drei Jahren als Trainerin im Bereich Cross Training, HIIT, funktionales Training und Langhanteltraining tätig. Meine eigene Leidenschaft gilt dem CrossFit und Kraftdreikampf – ich lebe, was ich coache.
+  </p>
+  <p>
+    Aktuell arbeite ich hauptberuflich als Mathematikerin in der Forschung – das heißt: analytisches Denken, Struktur und Präzision gehören ebenso zu mir wie Motivation, Begeisterung und Power. Außerdem war ich vier Jahre lang Mathematik-Tutorin an der Technischen Universität Berlin und 10 Jahre private Nachhilfelehrerin.
+  </p>
+  <p>
+    Du kannst also mit herausragenden didaktischen Fähigkeiten rechnen!
   </p>
 </section>
 
@@ -42,16 +47,6 @@
   <h2>Was mich als Coach besonders macht</h2>
   <p>
     Ich bin wirklich für dich da. Kein leeres Gerede – ich freue mich über deinen Fortschritt, als wäre es mein eigener. Ich sehe, was du brauchst, oft bevor du es selbst bemerkst: sei es technische Feinjustierung, eine Anpassung des Trainingsplans oder einfach ein motivierendes Wort zur richtigen Zeit. Dein Ziel ist mein Ziel – und ich gebe alles, damit du es erreichst.
-  </p>
-</section>
-
-<section>
-  <h2>Was mache ich, wenn ich nicht trainiere oder Training gebe?</h2>
-  <p>
-    Aktuell arbeite ich hauptberuflich als Mathematikerin in der Forschung – das heißt: analytisches Denken, Struktur und Präzision gehören ebenso zu mir wie Motivation, Begeisterung und Power. Außerdem war ich vier Jahre lang Mathematik-Tutorin an der Technischen Universität Berlin und 10 Jahre private Nachhilfelehrerin.
-  </p>
-  <p>
-    Du kannst also mit herausragenden didaktischen Fähigkeiten rechnen!
   </p>
 </section>
 
