--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <section>
   <h2>Werde zu einer besseren Version deiner selbst!</h2>
   <p>
-    Du willst stärker werden, Muskulatur aufbauen, Gewicht verlieren oder einfach gesünder und leistungsfähiger durchs Leben gehen? Dann bist du bei mir genau richtig!
+    Du willst fitter und stärker werden, Muskulatur aufbauen, Gewicht verlieren oder einfach gesünder und leistungsfähiger durchs Leben gehen? Dann bist du bei mir genau richtig!
   </p>
 </section>
 
@@ -46,6 +46,7 @@
   <ul>
     <li>Cross Training Outdoor</li>
     <li>Krafttraining</li>
+    <li>Bodyweight HIIT</li>
   </ul>
   <p>Details folgen bald!</p>
 </section>
