--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <section id="leistungen">
   <h2>Meine Leistungen</h2>
 
-  <h3>Personal Training (1:1)</h3>
+  <h3>Personal Training (1:1) (50€/60min)</h3>
   <ul>
     <li>Krafttraining & Langhanteltraining</li>
     <li>Muskelaufbau & Hypertrophietraining</li>
