--- a/galerie.html
+++ b/galerie.html
@@ -97,6 +97,7 @@
   <p><strong>E-Mail:</strong> <a href="mailto:helia7773@yahoo.com">helia7773@yahoo.com</a></p>
   <p><strong>Instagram:</strong> <a href="https://www.instagram.com/helia7773/" target="_blank">@helia7773</a></p>
   <p><strong>Telefon:</strong> <a href="tel:+491742769807">0174 2769807</a></p>
+  <p style="margin-top: 20px;"><a href="impressum.html">Impressum</a></p>
 </section>
 
 <footer>
