--- a/impressum.html
+++ b/impressum.html
@@ -85,8 +85,8 @@
 <main>
   <p><strong>Helia Shafigh</strong><br>
   Personal Trainerin<br>
-  [Straße und Hausnummer]<br>
-  [PLZ] [Stadt]<br>
+  Elberfelder Str. 3<br>
+  10555 Berlin<br>
   Deutschland</p>
 
   <p><strong>Kontakt:</strong><br>
