--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <li>Krafttraining</li>
     <li>Bodyweight HIIT</li>
   </ul>
-  <p>Details folgen bald!</p>
+  <p>Neuer Zyklus ab dem 21. Juli 2025. Details folgen bald!</p>
 </section>
 
 <section id="coaching">
