--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <li>Online-Coaching</li>
   </ul>
 
-  <h3>Gruppentraining</h3>
+  <h3>Gruppentraining (Outdoor Kurse)</h3>
   <ul>
-    <li>Cross Training Outdoor</li>
+    <li><a href="cross-training.html">Cross Training</a></li>
     <li>Krafttraining</li>
     <li>Bodyweight HIIT</li>
   </ul>
