--- a/cross-training.html
+++ b/cross-training.html
@@ -119,6 +119,9 @@
   <p>
     <strong>So einen günstigen und qualitativ hochwertigen Kurs wirst du nirgendwo sonst finden. Das garantiere ich dir.</strong>
   </p>
+  <p>
+    <strong>Ort:</strong> Outdoor Gym auf dem Campus der Technischen Universität Berlin (Straße des 17. Juni 135, 10623 Berlin)
+  </p>
 </section>
 
 <section class="kontakt" id="kontakt">
