--- a/cross-training.html
+++ b/cross-training.html
@@ -87,10 +87,10 @@
 
 <section>
   <p>
-    Du bist ein <strong>"alter Hase"</strong>, hast bereits viele Gruppenkurse erlebt und möchtest deine Fitness auf ein neues Level bringen?
+    Du bist ein "alter Hase", hast bereits viele Gruppenkurse erlebt und möchtest deine Fitness auf ein neues Level bringen?
     Dann ist dieser Kurs genau richtig für dich!<br><br>
 
-    Du bringst noch keine Erfahrung mit und bist auf der Suche nach etwas Neuem? Das könnte dein neuer Lieblingskurs werden!
+    Du bringst noch keine Erfahrung mit und bist auf der Suche nach etwas Neuem? Komm und trainiere in einer starken Community junger, motivierter Sportler!
   </p>
 
   <p>
