--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <h3>Gruppentraining (Outdoor Kurse)</h3>
   <ul>
     <li><a href="cross-training.html">Cross Training</a></li>
-    <li>Krafttraining</li>
+    <li><a href="krafttraining.html">Krafttraining</a></li>
     <li>Bodyweight HIIT</li>
   </ul>
   <p>Neuer Zyklus ab dem 21. Juli 2025. Details folgen bald!</p>
