--- a/krafttraining.html
+++ b/krafttraining.html
@@ -119,7 +119,7 @@
   <h2>Kursdetails</h2>
   <p>
     <strong>Tag und Uhrzeit:</strong> Sonntag 16–17 Uhr und/oder Donnerstag 18:30–19:30 Uhr<br>
-    <strong>Nächster Zeitraum:</strong> 24. Juli bis 12. Oktober 2025 (12 Termine)<br>
+    <strong>Nächster Zeitraum:</strong> 24. Juli bis 12. Oktober 2025 (12 Termine pro Kurs)<br>
     <strong>Kosten:</strong> 7€ pro Termin (84€ für 3 Monate pro Kurs)<br>
     <strong>Einzelterminbuchung:</strong> 10€ pro Termin
   </p>
