--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <li><a href="krafttraining.html">Krafttraining</a></li>
     <li>Bodyweight HIIT</li>
   </ul>
-  <p>Neuer Zyklus ab dem 21. Juli 2025. Details folgen bald!</p>
+  <p>Neuer Zyklus ab dem 21. Juli 2025. Für Details klicke auf den jeweiligen Kurs!</p>
 </section>
 
 <section id="coaching">
