--- a/cross-training.html
+++ b/cross-training.html
@@ -87,15 +87,12 @@
 
 <section>
   <p>
-    Du bist ein "alter Hase", hast bereits viele Gruppenkurse erlebt und möchtest deine Fitness auf ein neues Level bringen?
-    Dann ist dieser Kurs genau richtig für dich!<br><br>
-
-    Du bringst noch keine Erfahrung mit und bist auf der Suche nach etwas Neuem? Komm und trainiere in einer starken Community junger, motivierter Sportler!
+    Komm und trainiere in einer starken Community junger, motivierter Sportler!
   </p>
 
   <p>
-    Die klassischen Bodyweight-Übungen aus dem Functional Training werden hier um weitere Übungen an der Stange, mit der Langhantel
-    und Kettlebells ergänzt. Die sogenannten <strong>Workouts of the Day (WODs)</strong> variieren sowohl im Format als auch in der Auswahl der Übungen
+    Unser "Cross Training" ist ein spannende Mischung aus Bodyweight-Übungen aus dem Functional Training, Übungen an der Stange, mit der Langhantel
+    und Kettlebells. Die sogenannten <strong>Workouts of the Day (WoDs)</strong> variieren sowohl im Format als auch in der Auswahl der Übungen
     von Stunde zu Stunde, sodass die Trainingseinheiten immer spannend bleiben. Jede Trainingsstunde beansprucht jedoch immer
     den gesamten Körper und kombiniert Kraft- und Ausdauerübungen zu einem herausfordernden Mix.
   </p>
@@ -105,7 +102,7 @@
   </p>
 
   <p>
-    Der Kurs eignet sich für <strong>Anfänger*innen und Fortgeschrittene</strong> gleichermaßen, da jede Übung stets abgestuft (scaled) werden kann.
+    Der Kurs eignet sich für <strong>Anfänger*innen und Fortgeschrittene</strong> gleichermaßen, da jede Übung stets abgestuft (scaled) werden kann. Egal, ob du ein alter Hase oder ein absoluter Fitness-Anfänger bist: Für jedes Level gibt es passende Varianten!
   </p>
 
   <h2>Kursdetails</h2>
@@ -114,10 +111,6 @@
     <strong>Nächster Zeitraum:</strong> 27. Juli bis 12. Oktober 2025 (12 Termine)<br>
     <strong>Kosten:</strong> 6€ pro Termin (72€ für 3 Monate)<br>
     <strong>Einzelterminbuchung:</strong> 10€ pro Termin
-  </p>
-
-  <p>
-    <strong>So einen günstigen und qualitativ hochwertigen Kurs wirst du nirgendwo sonst finden. Das garantiere ich dir.</strong>
   </p>
   <p>
     <strong>Ort:</strong> Outdoor Gym auf dem Campus der Technischen Universität Berlin (Straße des 17. Juni 135, 10623 Berlin)
