--- a/cross-training.html
+++ b/cross-training.html
@@ -91,7 +91,7 @@
   </p>
 
   <p>
-    Unser "Cross Training" ist ein spannende Mischung aus Bodyweight-Übungen aus dem Functional Training, Übungen an der Stange, mit der Langhantel
+    Unser "Cross Training" ist eine spannende Mischung aus Bodyweight-Übungen aus dem Functional Training, Übungen an der Stange, mit der Langhantel
     und Kettlebells. Die sogenannten <strong>Workouts of the Day (WoDs)</strong> variieren sowohl im Format als auch in der Auswahl der Übungen
     von Stunde zu Stunde, sodass die Trainingseinheiten immer spannend bleiben. Jede Trainingsstunde beansprucht jedoch immer
     den gesamten Körper und kombiniert Kraft- und Ausdauerübungen zu einem herausfordernden Mix.
