--- a/galerie.html
+++ b/galerie.html
@@ -107,21 +107,21 @@
 
 <section class="galerie">
   <!-- Beispielbilder, du ersetzt src durch deine echten URLs -->
-  <img src="images/bild (1).jpg" alt="Bild 1">
-  <img src="images/bild (2).jpg" alt="Bild 2">
-  <img src="images/bild (3).jpg" alt="Bild 3">
-  <img src="images/bild (4).jpg" alt="Bild 4">
-  <img src="images/bild (5).jpg" alt="Bild 5">
-  <img src="images/bild (6).jpg" alt="Bild 6">
-  <img src="images/bild (7).jpg" alt="Bild 7">
-  <img src="images/bild (8).jpg" alt="Bild 8">
-  <img src="images/bild (9).jpg" alt="Bild 9">
-  <img src="images/bild (10).jpg" alt="Bild 10">
-  <img src="images/bild (11).jpg" alt="Bild 11">
-  <img src="images/bild (12).jpg" alt="Bild 12">
-  <img src="images/bild (13).jpg" alt="Bild 13">
-  <img src="images/bild (14).jpg" alt="Bild 14">
-  <img src="images/bild (15).jpg" alt="Bild 15">
+  <img src="images/bild (1).jpeg" alt="Bild 1">
+  <img src="images/bild (2).jpeg" alt="Bild 2">
+  <img src="images/bild (3).jpeg" alt="Bild 3">
+  <img src="images/bild (4).jpeg" alt="Bild 4">
+  <img src="images/bild (5).jpeg" alt="Bild 5">
+  <img src="images/bild (6).jpeg" alt="Bild 6">
+  <img src="images/bild (7).jpeg" alt="Bild 7">
+  <img src="images/bild (8).jpeg" alt="Bild 8">
+  <img src="images/bild (9).jpeg" alt="Bild 9">
+  <img src="images/bild (10).jpeg" alt="Bild 10">
+  <img src="images/bild (11).jpeg" alt="Bild 11">
+  <img src="images/bild (12).jpeg" alt="Bild 12">
+  <img src="images/bild (13).jpeg" alt="Bild 13">
+  <img src="images/bild (14).jpeg" alt="Bild 14">
+  <img src="images/bild (15).jpeg" alt="Bild 15">
 </section>
 
 <section class="kontakt" id="kontakt">
