--- a/galerie.html
+++ b/galerie.html
@@ -62,10 +62,10 @@
     }
 
     .galerie img {
+      max-width: 250px;
       width: 100%;
-      max-width: 300px;
-      height: 200px;
-      object-fit: cover;
+      height: auto;
+      object-fit: contain;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
@@ -73,7 +73,6 @@
     @media (max-width: 768px) {
       .galerie img {
         max-width: 100%;
-        height: auto;
       }
     }
 
@@ -106,7 +105,6 @@
 </header>
 
 <section class="galerie">
-  <!-- Beispielbilder, du ersetzt src durch deine echten URLs -->
   <img src="images/bild(1).jpeg" alt="Bild 1">
   <img src="images/bild (2).jpeg" alt="Bild 2">
   <img src="images/bild (3).jpeg" alt="Bild 3">
@@ -139,7 +137,4 @@
 </body>
 </html>
 
-
-</body>
-</html>
 
