--- a/krafttraining.html
+++ b/krafttraining.html
@@ -108,7 +108,7 @@
 
   <h2>Aktueller Trainingsplan</h2>
   <ul>
-    <li><strong>Donnerstag:</strong> Bench Press und (weighted) Pull-Up, danach Isolationsübungen für Lattissimus, Bizeps und Trizeps</li>
+    <li><strong>Donnerstag:</strong> Bench Press und (weighted) Pull-Up, danach Isolationsübungen für Latissimus, Bizeps und Trizeps</li>
     <li><strong>Sonntag:</strong> Back Squat und Sumo Deadlift</li>
   </ul>
 
