--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -4,7 +4,81 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Über mich – Fit mit Helia</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    nav {
+      background-color: #333;
+    }
+
+    nav ul {
+      display: flex;
+      justify-content: center;
+      list-style: none;
+      margin: 0;
+      padding: 10px;
+    }
+
+    nav ul li {
+      margin: 0 15px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .ueber-header {
+      background-image: url("images/ueber-mich-header.jpg"); /* Pfad zum Bild */
+      background-size: cover;
+      background-position: center;
+      height: 300px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .ueber-header h1 {
+      color: white;
+      font-size: 48px;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+      margin: 0;
+    }
+
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+
+    h2 {
+      color: #e67e22;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .kontakt a {
+      color: #e67e22;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
 
@@ -16,7 +90,7 @@
   </ul>
 </nav>
 
-<header>
+<header class="ueber-header">
   <h1>Über mich</h1>
 </header>
 
@@ -64,4 +138,3 @@
 
 </body>
 </html>
-
