--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -5,24 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Über mich – Fit mit Helia</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    header {
-      background-image: url("images/ueber-mich-header.jpg");
-      background-size: cover;
-      background-position: center;
-      height: 250px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    header h1 {
-      color: white;
-      font-size: 48px;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
-      margin: 0;
-    }
-  </style>
 </head>
 <body>
 
@@ -57,4 +39,28 @@
     <li>Fitnesstrainer B-Lizenz</li>
     <li>Fitnesstrainer A-Lizenz in Kürze</li>
     <li>Mehrjährige Erfahrung im Gruppencoaching</li>
-    <li>Eigene i
+    <li>Eigene intensive Trainingspraxis & tiefes Verständnis für individuelle Herausforderungen</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Was mich als Coach besonders macht</h2>
+  <p>
+    Ich bin wirklich für dich da. Kein leeres Gerede – ich freue mich über deinen Fortschritt, als wäre es mein eigener. Ich sehe, was du brauchst, oft bevor du es selbst bemerkst: sei es technische Feinjustierung, eine Anpassung des Trainingsplans oder einfach ein motivierendes Wort zur richtigen Zeit. Dein Ziel ist mein Ziel – und ich gebe alles, damit du es erreichst.
+  </p>
+</section>
+
+<section class="kontakt" id="kontakt">
+  <h2>Kontakt</h2>
+  <p><strong>E-Mail:</strong> <a href="mailto:helia7773@yahoo.com">helia7773@yahoo.com</a></p>
+  <p><strong>Instagram:</strong> <a href="https://www.instagram.com/helia7773/" target="_blank">@helia7773</a></p>
+  <p><strong>Telefon:</strong> <a href="tel:+491742769807">0174 2769807</a></p>
+  <p style="margin-top: 20px;"><a href="impressum.html">Impressum</a></p>
+</section>
+
+<footer>
+  <p>&copy; 2025 Fit mit Helia – Alle Rechte vorbehalten</p>
+</footer>
+
+</body>
+</html>
