--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -50,6 +50,18 @@
   </p>
 </section>
 
+  <section>
+  <h2>Einblicke in mein Training</h2>
+  <div class="galerie">
+    <img src="images/h1.jpg" alt="Training 1" />
+    <img src="images/h2.jpg" alt="Training 2" />
+    <img src="images/h3.jpg" alt="Training 3" />
+    <img src="images/h4.jpg" alt="Training 4" />
+    <img src="images/h5.jpg" alt="Training 5" />
+    <img src="images/h6.jpg" alt="Training 6" />
+  </div>
+</section>
+
 <section class="kontakt" id="kontakt">
   <h2>Kontakt</h2>
   <p><strong>E-Mail:</strong> <a href="mailto:helia7773@yahoo.com">helia7773@yahoo.com</a></p>
