--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -50,15 +50,14 @@
   </p>
 </section>
 
-  <section>
+ <section>
   <h2>Einblicke in mein Training</h2>
   <div class="galerie">
-    <img src="images/h1.jpeg" alt="Training 1" />
-    <img src="images/h2.jpeg" alt="Training 2" />
-    <img src="images/h3.jpeg" alt="Training 3" />
-    <img src="images/h4.jpeg" alt="Training 4" />
-    <img src="images/h5.jpeg" alt="Training 5" />
-    <img src="images/h6.jpeg" alt="Training 6" />
+    <img src="images/training1.jpeg" alt="Training 1" />
+    <img src="images/training2.jpeg" alt="Training 2" />
+    <img src="images/training3.jpeg" alt="Training 3" />
+    <img src="images/training4.jpeg" alt="Training 4" />
+    <img src="images/training5.jpeg" alt="Training 5" />
   </div>
 </section>
 
