--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -50,20 +50,20 @@
   </p>
 </section>
 
- <section>
-  <h2>Einblicke in mein Training</h2>
-  <div class="galerie">
-    <img src="images/h1.jpeg" alt="Training 1" />
-    <img src="images/h2.jpeg" alt="Training 2" />
-    <img src="images/h3.jpeg" alt="Training 3" />
-    <img src="images/h4.jpeg" alt="Training 4" />
-    <img src="images/h5.jpeg" alt="Training 5" />
-    <img src="images/h6.jpeg" alt="Training 6" />
-     <img src="images/h7.jpeg" alt="Training 7" />
-     <img src="images/h8.jpeg" alt="Training 8" />
-     <img src="images/h9.jpeg" alt="Training 9" />
-  </div>
+ 
+  <section class="galerie">
+    <img src="images/h1.jpeg" alt="Training 1" >
+    <img src="images/h2.jpeg" alt="Training 2" >
+    <img src="images/h3.jpeg" alt="Training 3" >
+    <img src="images/h4.jpeg" alt="Training 4" >
+    <img src="images/h5.jpeg" alt="Training 5" >
+    <img src="images/h6.jpeg" alt="Training 6" >
+     <img src="images/h7.jpeg" alt="Training 7" >
+     <img src="images/h8.jpeg" alt="Training 8" >
+     <img src="images/h9.jpeg" alt="Training 9" >
 </section>
+
+
 
 <section class="kontakt" id="kontakt">
   <h2>Kontakt</h2>
