--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -58,9 +58,9 @@
     <img src="images/h4.jpeg" alt="Training 4" >
     <img src="images/h5.jpeg" alt="Training 5" >
     <img src="images/h6.jpeg" alt="Training 6" >
-     <img src="images/h7.jpeg" alt="Training 7" >
-     <img src="images/h8.jpeg" alt="Training 8" >
-     <img src="images/h9.jpeg" alt="Training 9" >
+     <img src="images/h7.jpg" alt="Training 7" >
+     <img src="images/h8.jpg" alt="Training 8" >
+     <img src="images/h9.jpg" alt="Training 9" >
 </section>
 
 
