--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Über mich – Fit mit Helia</title>
+  <title>Über mich</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-
 
 <nav>
   <ul>
@@ -17,8 +15,6 @@
     <li><a href="galerie.html">Galerie</a></li>
   </ul>
 </nav>
-
-  
 
 <header>
   <h1>Über mich</h1>
@@ -54,9 +50,8 @@
   </p>
 </section>
 
-
- 
- <section>
+<!-- Neuer Abschnitt: Einblicke in mein Training -->
+<section>
   <h2 style="color: #e67e22; text-align: center; margin-bottom: 20px;">Einblicke in mein Training</h2>
   <div class="galerie">
     <img src="images/h1.jpeg" alt="Training 1" >
@@ -70,8 +65,6 @@
      <img src="images/h9.JPG" alt="Training 9" >
      </div>
 </section>
-
-
 
 <section class="kontakt" id="kontakt">
   <h2>Kontakt</h2>
@@ -87,3 +80,7 @@
 
 </body>
 </html>
+
+
+
+
