--- a/cross-training.html
+++ b/cross-training.html
@@ -87,7 +87,7 @@
 
 <section>
   <p>
-    Komm und trainiere in einer starken Community junger, motivierter Sportler!
+    Komm und trainiere in einer starken Community motivierter Sportler unterschiedlichen Alters!
   </p>
 
   <p>
