--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -37,7 +37,7 @@
   <h2>Meine Qualifikationen</h2>
   <ul>
     <li>Fitnesstrainer B-Lizenz</li>
-    <li>Fitnesstrainer A-Lizenz in Kürze</li>
+    <li>Fitnesstrainer A-Lizenz</li>
     <li>Mehrjährige Erfahrung im Gruppencoaching</li>
     <li>Eigene intensive Trainingspraxis & tiefes Verständnis für individuelle Herausforderungen</li>
   </ul>
