--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 <section id="leistungen">
   <h2>Meine Leistungen</h2>
 
-  <h3>Personal Training (1:1) (50€/60min)</h3>
+  <h3>Personal Training (1:1) (60€/60min)</h3>
   <ul>
     <li>Krafttraining & Langhanteltraining</li>
     <li>Muskelaufbau & Hypertrophietraining</li>
     <li>Funktionelles Training mit dem eigenen Körpergewicht</li>
     <li>HIIT und Konditionstraining</li>
+    <li>Hyrox Vorbereitung</li>
     <li>Gewichtsreduktion</li>
     <li>Ernährungsberatung</li>
     <li>Online-Coaching</li>
