--- a/index.html
+++ b/index.html
@@ -1,72 +1,77 @@
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #f9f9f9;
-  color: #333;
-  line-height: 1.6;
-}
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fit mit Helia</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-nav {
-  background-color: #1a2a6c;
-}
+<nav>
+  <ul>
+    <li><a href="index.html">Leistungen</a></li>
+    <li><a href="ueber-mich.html">Über mich</a></li>
+    <li><a href="galerie.html">Galerie</a></li>
+  </ul>
+</nav>
 
-nav ul {
-  display: flex;
-  justify-content: center;
-  list-style: none;
-  margin: 0;
-  padding: 10px;
-}
+<header id="start">
+  <h1>Fit mit Helia</h1>
+  <p>Personal Training & Gruppencoaching mit Helia Shafigh</p>
+</header>
 
-nav ul li {
-  margin: 0 15px;
-}
+<section>
+  <h2>Werde zu einer besseren Version deiner selbst!</h2>
+  <p>
+    Du willst fitter und stärker werden, Muskulatur aufbauen, Gewicht verlieren oder einfach gesünder und leistungsfähiger durchs Leben gehen? Dann bist du bei mir genau richtig!
+  </p>
+</section>
 
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-}
+<section id="leistungen">
+  <h2>Meine Leistungen</h2>
 
-header#start {
-  text-align: center;
-  padding: 60px 20px;
-  background-color: #1a2a6c;
-  color: white;
-}
+  <h3>Personal Training (1:1) (60€/h)</h3>
+  <ul>
+    <li>Krafttraining & Langhanteltraining</li>
+    <li>Muskelaufbau & Hypertrophietraining</li>
+    <li>Funktionelles Training mit dem eigenen Körpergewicht</li>
+    <li>HIIT und Konditionstraining</li>
+    <li>Hyrox Vorbereitung</li>
+    <li>Gewichtsreduktion</li>
+    <li>Ernährungsberatung</li>
+    <li>Online-Coaching</li>
+  </ul>
 
-section {
-  max-width: 1000px;
-  margin: auto;
-  padding: 40px 20px;
-}
+  <h3>Gruppentraining (Outdoor Kurse)</h3>
+  <ul>
+    <li><a href="cross-training.html">Cross Training</a></li>
+    <li><a href="krafttraining.html">Krafttraining</a></li>
+    <li>Bodyweight HIIT</li>
+  </ul>
+  <p>Neuer Zyklus ab dem 21. Juli 2025. Für Details klicke auf den jeweiligen Kurs!</p>
+</section>
 
-h2 {
-  color: #1a2a6c;
-  margin-bottom: 20px;
-  text-align: center;
-}
+<section id="coaching">
+  <p><strong>Gerade, wenn du AnfängerIn bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
+  <p><strong>Melde dich bei mir und wir finden das passende Angebot für dich!</strong></p>
+</section>
 
-h3 {
-  color: #1a2a6c;
-  margin-top: 30px;
-}
+<section class="kontakt" id="kontakt">
+  <h2>Kontakt</h2>
+  <p><strong>E-Mail:</strong> <a href="mailto:helia7773@yahoo.com">helia7773@yahoo.com</a></p>
+  <p><strong>Instagram:</strong> <a href="https://www.instagram.com/helia7773/" target="_blank">@helia7773</a></p>
+  <p><strong>Telefon:</strong> <a href="tel:+491742769807">0174 2769807</a></p>
+  <p style="margin-top: 20px;"><a href="impressum.html">Impressum</a></p>
+</section>
 
-ul {
-  padding-left: 20px;
-}
+<footer>
+  <p>&copy; 2025 Fit mit Helia – Alle Rechte vorbehalten</p>
+</footer>
 
-.kontakt a {
-  color: #1a2a6c;
-  text-decoration: none;
-}
+</body>
+</html>
 
-footer {
-  background-color: #1a2a6c;
-  color: white;
-  text-align: center;
-  padding: 20px;
-}
 
 
 
