--- a/galerie.html
+++ b/galerie.html
@@ -38,7 +38,7 @@
     header {
       text-align: center;
       padding: 60px 20px;
-      background-color: #e67e22;
+      background-color: #407dc6;
       color: white;
     }
 
