--- a/galerie.html
+++ b/galerie.html
@@ -38,7 +38,7 @@
     header {
       text-align: center;
       padding: 60px 20px;
-      background-color: #407dc6;
+      background-color: #306fb9;
       color: white;
     }
 
@@ -49,7 +49,7 @@
     }
 
     h2 {
-      color: #e67e22;
+      color: #306fb9;
       margin-bottom: 20px;
       text-align: center;
     }
@@ -84,7 +84,7 @@
     }
 
     .kontakt a {
-      color: #e67e22;
+      color: #306fb9;
       text-decoration: none;
     }
   </style>
