--- a/krafttraining.html
+++ b/krafttraining.html
@@ -38,7 +38,7 @@
     header {
       text-align: center;
       padding: 60px 20px;
-      background-color: #e67e22;
+      background-color: #306fb9;
       color: white;
     }
 
@@ -49,7 +49,7 @@
     }
 
     h2 {
-      color: #e67e22;
+      color: #306fb9;
       text-align: center;
       margin-bottom: 20px;
     }
@@ -62,7 +62,7 @@
     }
 
     .kontakt a {
-      color: #e67e22;
+      color: #306fb9;
       text-decoration: none;
     }
 
@@ -106,22 +106,19 @@
     Der Kurs ist eine ideale Ergänzung zum Cross Training, kann aber auch unabhängig davon besucht werden.
   </p>
 
-  <h2>Aktueller Trainingsplan</h2>
+  <h2>Trainingsplan ab dem 24. Juli:</h2>
   <ul>
-    <li><strong>Donnerstag:</strong> Bench Press und (weighted) Pull-Up, danach Isolationsübungen für Latissimus, Bizeps und Trizeps</li>
-    <li><strong>Sonntag:</strong> Back Squat und Sumo Deadlift</li>
+    <li><strong>Bench Press und (weighted) Pull-Up, danach Isolationsübungen für Latissimus, Bizeps und Trizeps</li>
   </ul>
 
-  <p>
-    Die beiden Kurse sind separat zu buchen! Du kannst entscheiden, ob du nur am Sonntagskurs oder Donnerstagskurs teilnehmen möchtest, oder bei Interesse beide buchen.
-  </p>
 
   <h2>Kursdetails</h2>
   <p>
-    <strong>Tag und Uhrzeit:</strong> Sonntag 16–17 Uhr und/oder Donnerstag 18:30–19:30 Uhr<br>
-    <strong>Nächster Zeitraum:</strong> 24. Juli bis 12. Oktober 2025 (12 Termine pro Kurs)<br>
-    <strong>Kosten:</strong> 8€ pro Termin (96€ für 3 Monate pro Kurs)<br>
-    <strong>Einzelterminbuchung:</strong> 12€ pro Termin
+    <strong>Tag und Uhrzeit:</strong> Donnerstag 18:30–19:30 Uhr<br>
+    <strong>Nächster Zeitraum:</strong> 24. Juli bis 12. Oktober 2025 (12 Termine)<br>
+    <strong>Kosten:</strong> 8€ pro Termin (96€ für 3 Monate)<br>
+    <strong>Einzelterminbuchung:</strong> 12€ pro Termin<br>
+     <strong>Buchung direkt über mich! Kontaktiere mich per Mail, WhatsApp oder auf Instagram!
   </p>
 
   <p><strong>Ort:</strong> Outdoor Gym auf dem Campus der Technischen Universität Berlin (Straße des 17. Juni 135, 10623 Berlin)</p>
