--- a/cross-training.html
+++ b/cross-training.html
@@ -38,7 +38,7 @@
     header {
       text-align: center;
       padding: 60px 20px;
-      background-color: #e67e22;
+      background-color: #306fb9;
       color: white;
     }
 
@@ -49,7 +49,7 @@
     }
 
     h2 {
-      color: #e67e22;
+      color: #306fb9;
       text-align: center;
       margin-bottom: 20px;
     }
@@ -62,7 +62,7 @@
     }
 
     .kontakt a {
-      color: #e67e22;
+      color: #306fb9;
       text-decoration: none;
     }
 
@@ -110,7 +110,9 @@
     <strong>Tag und Uhrzeit:</strong> Sonntags 17–18:30 Uhr (90 min)<br>
     <strong>Nächster Zeitraum:</strong> 27. Juli bis 12. Oktober 2025 (12 Termine)<br>
     <strong>Kosten:</strong> 6€ pro Termin (72€ für 3 Monate)<br>
-    <strong>Einzelterminbuchung:</strong> 10€ pro Termin
+    <strong>Einzelterminbuchung:</strong> 10€ pro Termin<br>
+     <strong>Buchung direkt über mich! Kontaktiere mich per Mail, WhatsApp oder auf Instagram!
+    
   </p>
   <p>
     <strong>Ort:</strong> Outdoor Gym auf dem Campus der Technischen Universität Berlin (Straße des 17. Juni 135, 10623 Berlin)
